navbar dark mode fix

--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,11 @@ body {
 
     nav,
     body {
-        background-color: white;
+        background-color: ;
         color: black;
+    }
+    .navbar {
+        background-color:#f8f9fa!important;
     }
 }
 
@@ -33,7 +36,7 @@ body {
         color: white;
     }
     .navbar {
-        background-color: #333;
+        background-color: #343a40!important;
         color: #dedede;
     }
 
